<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DataFragment"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/nombreText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apellidos"
        android:id="@+id/apellidosText"
        android:layout_below="@id/nombreText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dni"
        android:id="@+id/DNIText"
        android:layout_below="@id/apellidosText"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delegado"
        android:id="@+id/btnDelegado"
        android:layout_below="@id/DNIText"/>
    </RelativeLayout>
</FrameLayout>